# setwright

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARK.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  dco.yml  release.yml
assets/brand/: README.md
config/: chrome-for-testing.json  platform-support.json
docs/: accessibility.md  architecture.md  arxiv.md  brand.md  development.md  platform-support.md  release-readiness.md  releasing.md  runtimes.md  security.md
sample-project/: README.md  main.tex  paper-settings.json  references.bib
schemas/: README.md  arxiv-preflight-report.schema.json  paper-settings.schema.json  review-bundle.schema.json  runtime-manifest.schema.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/macos/: ContainmentHost-Info.plist  setwright_xpc_bridge.m
src-tauri/native/macos/SetwrightCompilerXPC/: Info.plist  service.entitlements  service.m  test-signing.cnf  tex_launcher.c
src-tauri/src/: ipc.rs  lib.rs  main.rs
src-tauri/src/core/: compile.rs  contracts.rs  error.rs  latex.rs  mod.rs  persistence.rs  preflight.rs  project.rs  review.rs  snapshot.rs  source.rs
src-tauri/src/services/: citations.rs  compiler.rs  mod.rs  runtime.rs  sandbox.rs  storage.rs
src-tauri/src/services/sandbox_platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/tests/: contracts_schema.rs  core_integration.rs  sandbox_containment.rs  source_properties.rs
templates/: README.md
(+85 files in other folders)
